fix: change z-index values

--- a/src/components/modal/modal.module.css
+++ b/src/components/modal/modal.module.css
@@ -1,7 +1,7 @@
 .overlay {
   position: fixed;
   inset: 0;
-  z-index: 10;
+  z-index: 19;
   background-color: rgb(9 9 11 / 40%);
   backdrop-filter: blur(5px);
 }
@@ -10,7 +10,7 @@
   position: fixed;
   top: 50%;
   left: 50%;
-  z-index: 12;
+  z-index: 20;
   width: 100%;
   max-height: 100%;
   padding: 50px 0;
